--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "npx prisma generate && next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@prisma/client": "^5.10.1",
+    "@prisma/client": "^5.10.2",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
@@ -18,6 +18,6 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "prisma": "^5.10.1"
+    "prisma": "^5.10.2"
   }
 }
